# chess-engine-gui

./: .gitignore  Cargo.toml  README.md
assets/: NOTE.md
engines/: bbc
src/: attack.rs  board.rs  buttons.rs  comm.rs  consts.rs  fen.rs  game.rs  game_manager.rs  gui.rs  gui_main.rs  magics.rs  main.rs  move_gen.rs  moves.rs  pgn.rs  utils.rs  zobrist.rs
src/chess/: attack.rs  board.rs  consts.rs  fen.rs  magics.rs  mod.rs  move_gen.rs  moves.rs  zobrist.rs
src/gui/: buttons.rs  gui_main.rs  mod.rs
